Http-adapter: added timeout configuration + tests

--- a/http-adapter/http-adapter-service/src/main/resources/application.yaml
+++ b/http-adapter/http-adapter-service/src/main/resources/application.yaml
@@ -1,4 +1,10 @@
 external:
+  channel:
+    connection:
+      timeout: 1000
+    request:
+      timeout: 3000
+
   api:
     url: http://localhost:9090
 
