jooq-notx: unfinished

--- a/http-adapter/http-adapter-integration-test/src/test/resources/citrus-application.properties
+++ b/http-adapter/http-adapter-integration-test/src/test/resources/citrus-application.properties
@@ -1,3 +1,7 @@
+http.adapter.service.url=localhost:8080
+external.api.mock.port=9090
+
+
 # citrus internal configuration
-citrus.spring.java.config=org.codemental.samples.webflux.java.http.adapter.integration.config.CitrusConfiguration
+citrus.spring.java.config=org.codemental.samples.webflux.java.jooq.adapter.integration.config.CitrusConfiguration
 citrus.html.report.enabled=false
